# ComputeDescriptors

./: CMakeLists.txt  ComputeFastPointFeatureHistograms.cpp  ComputeNormals.cpp  ComputePointFeatureHistograms.cpp  ComputePrincipalCurvatures.cpp  ComputeShapeContexts.cpp  ComputeSpinImages.cpp  ComputeViewpointFeatureHistograms.cpp
